# boosting_ai_model

./: .stestr.conf  Jenkinsfile  README.md  setup.cfg  tox.ini
boosting_ai_model/dataset/: make_dataset.py
boosting_ai_model/features/: build_features.py
boosting_ai_model/models/: deep_api.py
boosting_ai_model/tests/: test_unit_model.py
boosting_ai_model/visualization/: visualize.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-boosting_ai_model_start.ipynb
