# -*- coding: utf-8 -*-
[metadata]
name = boosting_ai_model
summary = This is the project which does the Decision Tree boosting
description-file =
    README.md
author = Hem Chandra
author-email = sh@xyz.com
version = 0.1.0
license = No license file
home-page = https://github.com/shramanpadhalni-web/boosting_ai_model
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    boosting_ai_model

[entry_points]

deepaas.v2.model = 
    boosting_ai_model = boosting_ai_model.models.deep_api

